--- a/index.html
+++ b/index.html
@@ -2,44 +2,40 @@
 
 <html>
 	<head>
-		<title>Website</title>
+		<title>Wal Services</title>
 		<link rel="stylesheet" href="css/css.css">
 		<script async src="/browser-sync/browser-sync-client.js"></script>
 	</head>
 	<body>
 		<div class="container header">
-			<div class="logo">
-				<a href="#"> 
-					<img
-						src="logo_website.image"
-						alt="logo_website"
-					/>
-				</a>
-			</div>
+			<a href="#">
+				<img
+					src="files/img/logo.png"
+					alt="Wal Services logo"
+					class="logo"
+				/>
+			</a>
 			<div class="navigation">
-				<div class="nav_item"><a href="#">Service</a></div>
-				<div class="nav_item"><a href="#">About Us</a></div>
-				<div class="nav_item"><a href="#">Contact Us</a></div>
+				<div class="nav_item"><a href="#">Portfolio</a></div>
+				<div class="nav_item"><a href="#">Services</a></div>
+				<div class="nav_item"><a href="#">À propos</a></div>
+				<div class="nav_item"><a href="#">Contact</a></div>
 			</div>
-			<div class="call_to_action">
-				<a href="#">Get Started</a>
-			</div>
+			<a class="call_to_action" href="#">Get Started</a>
 		</div>
 		<div class="container bigbox_1">
-			<div class="bigbox_1_div one">
-				<div class="title">Title</div>
-				<div class="paragraph">lorem ipsum</div>
-				<div class="cgu">condition general d'utilisation</div>
+			<div class="bigbox_1_div title_box_1">
+				<div class="item_one title">Title</div>
+				<div class="item_one paragraph">lorem ipsum</div>
+				<div class="item_one cgu">condition general d'utilisation</div>
+				<a class="call_to_action" href="#">Get Started</a>
 			</div>
-			<div class="bigbox_1_div two">
-				<div>
-					<a href="#">
-						<img 
-							src="lol"
-							alt="potential gif"
-						/>
-					</a>
-				</div>
+			<div class="bigbox_1_div team_box_1">
+				<img 
+					src="files/img/team.svg"
+					alt="illustration-1"
+					class="team"
+				/>
 			</div>
 		</div>
 		<div class="container footer">work in progress</div>
