starting to work on the other pages

--- a/index.html
+++ b/index.html
@@ -3,36 +3,36 @@
 <html>
 	<head>
 		<title>Wal Services</title>
-		<link rel="stylesheet" href="css/css.css">
+		<link rel="stylesheet" href="./css/index.css">
 		<script async src="/browser-sync/browser-sync-client.js"></script>
 	</head>
 	<body>
 		<div class="container header">
 			<a href="#">
 				<img
-					src="files/img/logo.png"
+					src="./files/img/logo.png"
 					alt="Wal Services logo"
 					class="logo"
 				/>
 			</a>
 			<div class="navigation">
-				<div class="nav_item"><a href="#">Portfolio</a></div>
-				<div class="nav_item"><a href="#">Services</a></div>
-				<div class="nav_item"><a href="#">À propos</a></div>
-				<div class="nav_item"><a href="#">Contact</a></div>
+                <div class="nav_item"><a href="./files/pages/portfolio.html">Portfolio</a></div>
+				<div class="nav_item"><a href="./files/pages/services.html">Services</a></div>
+				<div class="nav_item"><a href="./files/pages/a_propos.html">À propos</a></div>
+				<div class="nav_item"><a href="./files/pages/contact.html">Contact</a></div>
 			</div>
 			<a class="call_to_action" href="#">Get Started</a>
 		</div>
 		<div class="container bigbox_1">
 			<div class="bigbox_1_div title_box_1">
-				<div class="item_one title">Title</div>
-				<div class="item_one paragraph">lorem ipsum</div>
+				<div class="item_one title">Build The future</div>
+				<div class="item_one paragraph">Lorem ipsum dolor sit amet, fringilla diam.</div>
 				<div class="item_one cgu">condition general d'utilisation</div>
 				<a class="call_to_action" href="#">Get Started</a>
 			</div>
 			<div class="bigbox_1_div team_box_1">
 				<img 
-					src="files/img/team.svg"
+					src="./files/img/team.svg"
 					alt="illustration-1"
 					class="team"
 				/>
