--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Wal Services</title>
 		<link rel="stylesheet" href="./css/index.css">
+		<link rel="icon" type="image/x-icon" href="./files/img/favicon.ico">
 		<script async src="/browser-sync/browser-sync-client.js"></script>
 	</head>
 	<body>
