--- a/files/pages/portfolio.html
+++ b/files/pages/portfolio.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Portfolio</title>
 		<link rel="stylesheet" href="../../css/index.css">
+		<link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 	</head>
 	<body>
 		<div class="container header">
