JS and Vite added

--- a/index.html
+++ b/index.html
@@ -1,44 +1,49 @@
-<!DOCTYPE html>
-
-<html>
-	<head>
-		<title>Wal Services</title>
-		<link rel="stylesheet" href="./css/index.css">
-		<link rel="icon" type="image/x-icon" href="./files/img/favicon.ico">
-		<script async src="/browser-sync/browser-sync-client.js"></script>
-	</head>
-	<body>
-		<div class="container header">
-			<a href="#">
-				<img
-					src="./files/img/logo.png"
-					alt="Wal Services logo"
-					class="logo"
-				/>
-			</a>
-			<div class="navigation">
-                <div class="nav_item"><a href="./files/pages/portfolio.html">Portfolio</a></div>
-				<div class="nav_item"><a href="./files/pages/services.html">Services</a></div>
-				<div class="nav_item"><a href="./files/pages/a_propos.html">À propos</a></div>
-				<div class="nav_item"><a href="./files/pages/contact.html">Contact</a></div>
-			</div>
-			<a class="call_to_action" href="#">Get Started</a>
-		</div>
-		<div class="container bigbox_1">
-			<div class="bigbox_1_div title_box_1">
-				<div class="item_one title">Build The future</div>
-				<div class="item_one paragraph">Lorem ipsum dolor sit amet, fringilla diam.</div>
-				<div class="item_one cgu">condition general d'utilisation</div>
-				<a class="call_to_action" href="#">Get Started</a>
-			</div>
-			<div class="bigbox_1_div team_box_1">
-				<img 
-					src="./files/img/team.svg"
-					alt="illustration-1"
-					class="team"
-				/>
-			</div>
-		</div>
-		<div class="container footer">work in progress</div>
-	</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.co" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="https://api.fontshare.com/v2/css?f[]=poppins@400,500,600,700&display=swap" rel="stylesheet">
+	<script type="module" src="./src/main.js"></script>
+    <title>Wall Service</title>
+  </head>
+  <body>
+	  <header class="header container">
+		  <a href="#">
+			  <img class="header__logo" src="./public/logo.png" alt="Wall Service">
+		  </a>
+		  <nav>
+		  	<ul class="header__menu">
+		  		<li> <a class="header__link" href="#">Portfolio</a></li>
+		  		<li> <a class="header__link" href="#">Services</a></li>
+		  		<li> <a class="header__link" href="#">À propos</a></li>
+		  		<li> <a class="header__link" href="#">Contact</a></li>
+		  	</ul>
+		  </nav>
+		  <button class="header__bars">
+			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" >
+  				<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+			</svg>
+		  </button>
+		  <button class="header__call_to_action custom_btn blue_btn"><a href="#"></a>
+			  Get Started
+		  </button>
+	  </header>
+	  <main>
+	  	<section class="boxone container">
+			<img src="./public/team.svg" alt="hero_svg">
+		</section>
+	  <!-- 	<section></section>	 -->
+	  <!-- 	<section></section>	 -->
+	  <!-- 	<section></section>	 -->
+	  <!-- 	<section></section>	 -->
+	  <!-- 	<section></section>	 -->
+	  <!-- 	<section></section>	 -->
+	  <!-- 	<section></section>	 -->
+	  </main>
+	  <!-- <footer> -->
+	  <!---->
+	  <!-- </footer> -->
+  </body>
 </html>
