--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
 		  </button>
 	  </header>
 	  <main>
-	  	<section class="boxone container">
-			<img src="./public/team.svg" alt="hero_svg">
+	  	<section class="hero container">
+			<div class="hero__box">
+				<h1 class="mini__hero hero__title">Build the future</h1>
+				<p class="mini__hero hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit, accumsan lacinia imperdiet eget, posuere scelerisque urna. Aenean suscipit enim vel magna mattis, sit amet fringilla nibh auctor. </p>
+				<button class="mini__hero hero__calltoaction custom_btn blue_btn">Learn More</button>
+			</div>
+			<img class="hero__image" src="./public/team.svg" alt="hero_svg">
 		</section>
-	  <!-- 	<section></section>	 -->
+		<section class="boxtwo container">
+				<h2 class="boxtwo__title">Our Commitment<br/> to Excellence</h2>
+				<p class="boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
+		</section>	
 	  <!-- 	<section></section>	 -->
 	  <!-- 	<section></section>	 -->
 	  <!-- 	<section></section>	 -->
