--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
 			  Get Started
 		  </button>
 	  </header>
+	  <div class="mobile-nav">
+		  <nav>
+		  	<ul class="mobile-nav__menu">
+				<li>
+					<a href="#" class="mobile-nav__link">Portfolio<a/>
+				</li>
+				<li>
+					<a href="#" class="mobile-nav__link">Services<a/>
+				</li>
+				<li>
+					<a href="#" class="mobile-nav__link">a propos<a/>
+				</li>
+				<li>
+					<a href="#" class="mobile-nav__link">Contact<a/>
+				</li>
+		  	</ul>
+		  </nav>
+	  </div>
+	  <div></div>
 	  <main>
 	  	<section class="hero container">
 			<div class="hero__box">
@@ -43,15 +62,33 @@
 				<h2 class="boxtwo__title">Our Commitment<br/> to Excellence</h2>
 				<p class="boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
 		</section>	
-	  <!-- 	<section></section>	 -->
+	  	<section>
+			<div>
+			</div>
+			<div>
+			</div>
+			<div>
+			</div>
+			<div>
+			</div>
+		</section>	
 	  <!-- 	<section></section>	 -->
 	  <!-- 	<section></section>	 -->
 	  <!-- 	<section></section>	 -->
 	  <!-- 	<section></section>	 -->
 	  <!-- 	<section></section>	 -->
 	  </main>
-	  <!-- <footer> -->
-	  <!---->
-	  <!-- </footer> -->
+	  <footer class="footer container section">
+		<h2 class="footer__title">© 2025 WAL Services. All rights reserved.</h2>
+		<div class="footer__cgu">
+			<a href="#" class="footer__tec">Terms & Conditions</a>
+			<a href="#" class="footer__pp">Privacy Policy</a>
+		</div>
+		<div class="footer__links">
+			<a href="https://web.facebook.com/" target="_blank"><img class="footer__icons" src="./public/facebook_icon.svg" alt="facebook icon"></a>
+			<a href="https://linkedin.com/" target="_blank"><img class="footer__icons" src="./public/linkedin_icon.svg" alt="linkedin icon"></a>
+			<a href="https://x.com/" target="_blank"><img class="footer__icons" src="./public/x_icon.svg" alt="x(twitter) icon"></a>
+		</div>
+	  </footer>
   </body>
 </html>
