--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.co" />
+    <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="https://api.fontshare.com/v2/css?f[]=poppins@400,500,600,700&display=swap" rel="stylesheet">
 	<script type="module" src="./src/main.js"></script>
