--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		  </a>
 		  <nav>
 		  	<ul class="header__menu">
-		  		<li> <a class="header__link" href="#">Portfolio</a></li>
+		  		<li> <a class="header__link" href="./pages/portfolio.html">Portfolio</a></li>
 		  		<li> <a class="header__link" href="#">Services</a></li>
 		  		<li> <a class="header__link" href="#">À propos</a></li>
 		  		<li> <a class="header__link" href="#">Contact</a></li>
