--- a/index.html
+++ b/index.html
@@ -90,5 +90,9 @@
 			<a href="https://x.com/" target="_blank"><img class="footer__icons" src="./public/x_icon.svg" alt="x(twitter) icon"></a>
 		</div>
 	  </footer>
+	<script>
+  		window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+	</script>
+	<script defer src="/_vercel/speed-insights/script.js"></script>
   </body>
 </html>
