landingpage more or less working

--- a/index.html
+++ b/index.html
@@ -62,21 +62,317 @@
 				<h2 class="boxtwo__title">Our Commitment<br/> to Excellence</h2>
 				<p class="boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
 		</section>	
-	  	<section>
-			<div>
+	  	<section class="cardsection container">
+			<a href="#" class="card container">
+				<img src="./public/one.webp" alt="image" class="card__image">
+				<div class="card__content">
+					<div class="card__title">
+						Customer Relations Excellence
+					</div>
+					<div class="card__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
+					</div>
+				</div>
+			</a>
+			<a href="#" class="card container">
+				<img src="./public/two.webp" alt="image" class="card__image">
+				<div class="card__content">
+					<div class="card__title">
+						Efficient Customer Service
+					</div>
+					<div class="card__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
+					</div>
+				</div>
+			</a>
+			<a href="#" class="card container">
+				<img src="./public/three.webp" alt="image" class="card__image">
+				<div class="card__content">
+					<div class="card__title">
+						Technical Support Solutions
+					</div>
+					<div class="card__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
+					</div>
+				</div>
+			</a>
+			<a href="#" class="card container">
+				<img src="./public/tenweb_media_RMK2QKHZ7.webp" alt="image" class="card__image">
+				<div class="card__content">
+					<div class="card__title">
+						Tailored Service Solutions
+					</div>
+					<div class="card__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
+					</div>
+				</div>
+			</a>
+		</section>	
+	  	<section class="team container">
+			<div class="team__box1">
+				<div class="team__box1__subtitle">
+					meet our team
+				</div>
+				<div class="team__box1__title">
+					Get To Know Us
+				</div>
+				<div class="team__box1__text">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
+				</div>
+				<div class="team__box1__button">
+					<button class="white_btn custom_btn">Learn More</button>
+				</div>
 			</div>
-			<div>
-			</div>
-			<div>
-			</div>
-			<div>
+			<div class="team__box2__lol">
+				<div class="team__box2">
+					<img class="team__box2__img" src="./public/pdp.webp" alt="image team">
+					<div class="team__box2__content">
+						<div class="tbc team__box2__name">
+							Alice Johnson
+						</div>
+						<div class="tbc team__box2__job">
+							Customer Relations Specialist
+						</div>
+						<div class="tbc team__box2__text">
+							Alice excels in building strong client relationships and ensuring satisfaction through effective communication.
+						</div>
+						<div class="tbc team__box2__links">
+							<a href="https://linkedin.com/" target="_blank"><img class="footer__icons team__box2__icon" src="./public/linkedin_icon.svg" alt="linkedin icon"></a>
+							<a href="https://web.facebook.com/" target="_blank"><img class="footer__icons team__box2__icon" src="./public/facebook_icon.svg" alt="facebook icon"></a>
+						</div>
+					</div>
+				</div>
+				<div class="team__box2">
+					<img class="team__box2__img" src="./public/pdp.webp" alt="image team">
+					<div class="team__box2__content">
+						<div class="tbc team__box2__name">
+							Alice Johnson
+						</div>
+						<div class="tbc team__box2__job">
+							Customer Relations Specialist
+						</div>
+						<div class="tbc team__box2__text">
+							Alice excels in building strong client relationships and ensuring satisfaction through effective communication.
+						</div>
+						<div class="tbc team__box2__links">
+							<a href="https://linkedin.com/" target="_blank"><img class="footer__icons team__box2__icon" src="./public/linkedin_icon.svg" alt="linkedin icon"></a>
+							<a href="https://web.facebook.com/" target="_blank"><img class="footer__icons team__box2__icon" src="./public/facebook_icon.svg" alt="facebook icon"></a>
+						</div>
+					</div>
+				</div>
+				<div class="team__box2">
+					<img class="team__box2__img" src="./public/pdp.webp" alt="image team">
+					<div class="team__box2__content">
+						<div class="tbc team__box2__name">
+							Alice Johnson
+						</div>
+						<div class="tbc team__box2__job">
+							Customer Relations Specialist
+						</div>
+						<div class="tbc team__box2__text">
+							Alice excels in building strong client relationships and ensuring satisfaction through effective communication.
+						</div>
+						<div class="tbc team__box2__links">
+							<a href="https://linkedin.com/" target="_blank"><img class="footer__icons team__box2__icon" src="./public/linkedin_icon.svg" alt="linkedin icon"></a>
+							<a href="https://web.facebook.com/" target="_blank"><img class="footer__icons team__box2__icon" src="./public/facebook_icon.svg" alt="facebook icon"></a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>	
-	  <!-- 	<section></section>	 -->
-	  <!-- 	<section></section>	 -->
-	  <!-- 	<section></section>	 -->
-	  <!-- 	<section></section>	 -->
-	  <!-- 	<section></section>	 -->
+	  	<section class="image_section container">
+			<img src="./public/big_image.webp" alt="image_section" class="image_section__img">
+		</section>	
+	  	<section class="success_story container">
+			<!-- lol mifamadika left sy right kamo be za hanambotra -->
+			<div class="success_story__box1">
+				<div class="success_story__box1__right">
+					<div class="success_story__box1__right__title">
+						Success Stories
+					</div>
+					<div class="success_story__box1__right__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
+					</div>
+				</div>
+				<div class="success_story__box1__left">
+					<div class="success_story__box1__left__minibox">
+						<div class="success_story__box1__left__miniboxlol">
+							<div class="success_story__box1__left__minibox__title">
+								TechCo
+							</div>
+							<div class="success_story__box1__left__minibox__text">
+								30% Reduction
+							</div>
+						</div>
+						<div class="success_story__box1__left__miniboxlol">
+							<div class="success_story__box1__left__minibox__title">
+								TechCo
+							</div>
+							<div class="success_story__box1__left__minibox__text">
+								30% Reduction
+							</div>
+						</div>
+					</div>
+					<div class="success_story__box1__left__minibox">
+						<div class="success_story__box1__left__miniboxlol">
+							<div class="success_story__box1__left__minibox__title">
+								TechCo
+							</div>
+							<div class="success_story__box1__left__minibox__text">
+								30% Reduction
+							</div>
+						</div>
+						<div class="success_story__box1__left__miniboxlol">
+							<div class="success_story__box1__left__minibox__title">
+								TechCo
+							</div>
+							<div class="success_story__box1__left__minibox__text">
+								30% Reduction
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="success_story__box2">
+				<div class="success_story__box2__line">
+					<svg class="success_story__box2__line__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" d="M5.25 8.25h15m-16.5 7.5h15m-1.8-13.5-3.9 19.5m-2.1-19.5-3.9 19.5" />
+					</svg>
+					<div class="success_story__box2__line__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+					</div>
+				</div>
+				<div class="success_story__box2__line">
+					<svg class="success_story__box2__line__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" d="M5.25 8.25h15m-16.5 7.5h15m-1.8-13.5-3.9 19.5m-2.1-19.5-3.9 19.5" />
+					</svg>
+					<div class="success_story__box2__line__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+					</div>
+				</div>
+				<div class="success_story__box2__line">
+					<svg class="success_story__box2__line__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" d="M5.25 8.25h15m-16.5 7.5h15m-1.8-13.5-3.9 19.5m-2.1-19.5-3.9 19.5" />
+					</svg>
+					<div class="success_story__box2__line__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+					</div>
+				</div>
+			</div>
+		</section>	
+	  	<section class="faq container">
+			<div class="faq-box">
+				<p class="faq-box__title">
+					Frequently Asked Questions
+				</p>
+				<p class="faq-box__text">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+				</p>
+				<div class="faq-box__accordion">
+					<div class="faq-box__accordion__minibox">
+						<div class="faq-question">
+							<div class="faq-question__title">
+								What services do you offer?
+							</div>
+							<svg class="faq-question__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+							  	<path fill-rule="evenodd" d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z" clip-rule="evenodd" />
+							</svg>
+						</div>
+						<div class="faq-answer">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="faq-box__accordion">
+					<div class="faq-box__accordion__minibox">
+						<div class="faq-question">
+							<div class="faq-question__title">
+								What services do you offer?
+							</div>
+							<svg class="faq-question__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+							  	<path fill-rule="evenodd" d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z" clip-rule="evenodd" />
+							</svg>
+						</div>
+						<div class="faq-answer">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="faq-box__accordion">
+					<div class="faq-box__accordion__minibox">
+						<div class="faq-question">
+							<div class="faq-question__title">
+								What services do you offer?
+							</div>
+							<svg class="faq-question__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+							  	<path fill-rule="evenodd" d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z" clip-rule="evenodd" />
+							</svg>
+						</div>
+						<div class="faq-answer">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="git-box">
+				<p class="git-box__title">
+					Get In Touch
+				</p>
+				<p class="git-box__text">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+				</p>
+				<div class="git-box__btn">
+					<button class="blue_btn custom_btn">Contact Us</button>
+				</div>
+			</div>
+		</section>	
+	  	<section class="contact-section container">
+			<div class="contact-section__minibox">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="contact-section__icon">
+ 					 <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+				</svg>
+				<div class="contact-section__title">
+					Email Us
+				</div>
+				<div class="contact-section__text">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+				</div>
+			</div>
+			<div class="contact-section__minibox">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="contact-section__icon">
+ 					 <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+				</svg>
+				<div class="contact-section__title">
+					Email Us
+				</div>
+				<div class="contact-section__text">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+				</div>
+			</div>
+			<div class="contact-section__minibox">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="contact-section__icon">
+ 					 <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+				</svg>
+				<div class="contact-section__title">
+					Email Us
+				</div>
+				<div class="contact-section__text">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
+				</div>
+			</div>
+		</section>	
 	  </main>
 	  <footer class="footer container section">
 		<h2 class="footer__title">© 2025 WAL Services. All rights reserved.</h2>
