--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 		  	</ul>
 		  </nav>
 	  </div>
-	  <div></div>
 	  <main>
 	  	<section class="hero container">
 			<div class="hero__box">
@@ -59,28 +58,28 @@
 			<img class="hero__image" src="./public/team.svg" alt="hero_svg">
 		</section>
 		<section class="boxtwo container">
-				<h2 class="boxtwo__title">Our Commitment<br/> to Excellence</h2>
-				<p class="boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
+			<h2 class="two boxtwo__title">Our Commitment<br/> to Excellence</h2>
+			<p class="two boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
 		</section>	
 	  	<section class="cardsection container">
 			<a href="#" class="card container">
 				<img src="./public/one.webp" alt="image" class="card__image">
 				<div class="card__content">
-					<div class="card__title">
+					<div class="card__title minicard">
 						Customer Relations Excellence
 					</div>
-					<div class="card__text">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
+					<div class="card__text minicard">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 					</div>
 				</div>
 			</a>
 			<a href="#" class="card container">
 				<img src="./public/two.webp" alt="image" class="card__image">
 				<div class="card__content">
-					<div class="card__title">
+					<div class="card__title minicard">
 						Efficient Customer Service
 					</div>
-					<div class="card__text">
+					<div class="card__text minicard">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
 					</div>
 				</div>
@@ -88,10 +87,10 @@
 			<a href="#" class="card container">
 				<img src="./public/three.webp" alt="image" class="card__image">
 				<div class="card__content">
-					<div class="card__title">
+					<div class="card__title minicard">
 						Technical Support Solutions
 					</div>
-					<div class="card__text">
+					<div class="card__text minicard">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
 					</div>
 				</div>
@@ -99,10 +98,10 @@
 			<a href="#" class="card container">
 				<img src="./public/tenweb_media_RMK2QKHZ7.webp" alt="image" class="card__image">
 				<div class="card__content">
-					<div class="card__title">
+					<div class="card__title minicard">
 						Tailored Service Solutions
 					</div>
-					<div class="card__text">
+					<div class="card__text minicard">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
 					</div>
 				</div>
@@ -113,18 +112,18 @@
 				<div class="team__box1__subtitle">
 					meet our team
 				</div>
-				<div class="team__box1__title">
+				<div class="ooo team__box1__title">
 					Get To Know Us
 				</div>
-				<div class="team__box1__text">
+				<div class="ooo team__box1__text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
 				</div>
-				<div class="team__box1__button">
+				<div class="ooo team__box1__button">
 					<button class="white_btn custom_btn">Learn More</button>
 				</div>
 			</div>
 			<div class="team__box2__lol">
-				<div class="team__box2">
+				<div class="team__box2 tb">
 					<img class="team__box2__img" src="./public/pdp.webp" alt="image team">
 					<div class="team__box2__content">
 						<div class="tbc team__box2__name">
@@ -142,7 +141,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="team__box2">
+				<div class="team__box2 tb">
 					<img class="team__box2__img" src="./public/pdp.webp" alt="image team">
 					<div class="team__box2__content">
 						<div class="tbc team__box2__name">
@@ -160,7 +159,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="team__box2">
+				<div class="team__box2 tb">
 					<img class="team__box2__img" src="./public/pdp.webp" alt="image team">
 					<div class="team__box2__content">
 						<div class="tbc team__box2__name">
@@ -185,18 +184,18 @@
 		</section>	
 	  	<section class="success_story container">
 			<!-- lol mifamadika left sy right kamo be za hanambotra -->
-			<div class="success_story__box1">
+			<div class="success_story__box1 ">
 				<div class="success_story__box1__right">
-					<div class="success_story__box1__right__title">
+					<div class="success_story__box1__right__title ssbone">
 						Success Stories
 					</div>
-					<div class="success_story__box1__right__text">
+					<div class="success_story__box1__right__text ssbone">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
 					</div>
 				</div>
 				<div class="success_story__box1__left">
 					<div class="success_story__box1__left__minibox">
-						<div class="success_story__box1__left__miniboxlol">
+						<div class="success_story__box1__left__miniboxlol miniboxlol">
 							<div class="success_story__box1__left__minibox__title">
 								TechCo
 							</div>
@@ -204,7 +203,7 @@
 								30% Reduction
 							</div>
 						</div>
-						<div class="success_story__box1__left__miniboxlol">
+						<div class="success_story__box1__left__miniboxlol miniboxlol">
 							<div class="success_story__box1__left__minibox__title">
 								TechCo
 							</div>
@@ -214,7 +213,7 @@
 						</div>
 					</div>
 					<div class="success_story__box1__left__minibox">
-						<div class="success_story__box1__left__miniboxlol">
+						<div class="success_story__box1__left__miniboxlol miniboxlol">
 							<div class="success_story__box1__left__minibox__title">
 								TechCo
 							</div>
@@ -222,7 +221,7 @@
 								30% Reduction
 							</div>
 						</div>
-						<div class="success_story__box1__left__miniboxlol">
+						<div class="success_story__box1__left__miniboxlol miniboxlol">
 							<div class="success_story__box1__left__minibox__title">
 								TechCo
 							</div>
@@ -234,7 +233,7 @@
 				</div>
 			</div>
 			<div class="success_story__box2">
-				<div class="success_story__box2__line">
+				<div class="success_story__box2__line ssbtwo">
 					<svg class="success_story__box2__line__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M5.25 8.25h15m-16.5 7.5h15m-1.8-13.5-3.9 19.5m-2.1-19.5-3.9 19.5" />
 					</svg>
@@ -242,7 +241,7 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
 					</div>
 				</div>
-				<div class="success_story__box2__line">
+				<div class="success_story__box2__line ssbtwo">
 					<svg class="success_story__box2__line__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M5.25 8.25h15m-16.5 7.5h15m-1.8-13.5-3.9 19.5m-2.1-19.5-3.9 19.5" />
 					</svg>
@@ -250,7 +249,7 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
 					</div>
 				</div>
-				<div class="success_story__box2__line">
+				<div class="success_story__box2__line ssbtwo">
 					<svg class="success_story__box2__line__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M5.25 8.25h15m-16.5 7.5h15m-1.8-13.5-3.9 19.5m-2.1-19.5-3.9 19.5" />
 					</svg>
