--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 			<img class="hero__image" src="./public/team.svg" alt="hero_svg">
 		</section>
 		<section class="boxtwo container">
-			<h2 class="two boxtwo__title">Our Commitment<br/> to Excellence</h2>
-			<p class="two boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
+			<h2 class="on_scroll boxtwo__title">Our Commitment<br/> to Excellence</h2>
+			<p class="on_scroll boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
 		</section>	
 	  	<section class="cardsection container">
 			<a href="#" class="card container">
@@ -112,13 +112,13 @@
 				<div class="team__box1__subtitle">
 					meet our team
 				</div>
-				<div class="ooo team__box1__title">
+				<div class="on_scroll team__box1__title">
 					Get To Know Us
 				</div>
-				<div class="ooo team__box1__text">
+				<div class="on_scroll team__box1__text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
 				</div>
-				<div class="ooo team__box1__button">
+				<div class="on_scroll team__box1__button">
 					<button class="white_btn custom_btn">Learn More</button>
 				</div>
 			</div>
