--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 			<div class="hero__box">
 				<h1 class="mini__hero hero__title">Build the future</h1>
 				<p class="mini__hero hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit, accumsan lacinia imperdiet eget, posuere scelerisque urna. Aenean suscipit enim vel magna mattis, sit amet fringilla nibh auctor. </p>
-				<button class="mini__hero hero__calltoaction custom_btn blue_btn">Learn More</button>
+				<button class="mini__hero hero__calltoaction custom_btn blue_btn on_scroll">Learn More</button>
 			</div>
 			<img class="hero__image" src="./public/team.svg" alt="hero_svg">
 		</section>
 		<section class="boxtwo container">
-			<h2 class="on_scroll boxtwo__title">Our Commitment<br/> to Excellence</h2>
-			<p class="on_scroll boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
+			<h2 class="on_scroll from_top boxtwo__title">Our Commitment<br/> to Excellence</h2>
+			<p class="on_scroll from_bottom boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
 		</section>	
 	  	<section class="cardsection container">
 			<a href="#" class="card container">
@@ -109,21 +109,21 @@
 		</section>	
 	  	<section class="team container">
 			<div class="team__box1">
-				<div class="team__box1__subtitle">
+				<div class="team__box1__subtitle tb1 on_scroll from_left">
 					meet our team
 				</div>
-				<div class="on_scroll team__box1__title">
+				<div class="tb1 on_scroll from_left team__box1__title">
 					Get To Know Us
 				</div>
-				<div class="on_scroll team__box1__text">
+				<div class="tb1 on_scroll from_left team__box1__text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
 				</div>
-				<div class="on_scroll team__box1__button">
+				<div class="tb1 on_scroll from_left team__box1__button">
 					<button class="white_btn custom_btn">Learn More</button>
 				</div>
 			</div>
 			<div class="team__box2__lol">
-				<div class="team__box2 tb">
+				<div class="team__box2 on_scroll from_bottom">
 					<img class="team__box2__img" src="./public/pdp.webp" alt="image team">
 					<div class="team__box2__content">
 						<div class="tbc team__box2__name">
@@ -141,7 +141,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="team__box2 tb">
+				<div class="team__box2 on_scroll from_bottom">
 					<img class="team__box2__img" src="./public/pdp.webp" alt="image team">
 					<div class="team__box2__content">
 						<div class="tbc team__box2__name">
@@ -159,7 +159,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="team__box2 tb">
+				<div class="team__box2 on_scroll from_bottom">
 					<img class="team__box2__img" src="./public/pdp.webp" alt="image team">
 					<div class="team__box2__content">
 						<div class="tbc team__box2__name">
@@ -184,8 +184,8 @@
 		</section>	
 	  	<section class="success_story container">
 			<!-- lol mifamadika left sy right kamo be za hanambotra -->
-			<div class="success_story__box1 ">
-				<div class="success_story__box1__right">
+			<div class="success_story__box1 on_scroll">
+				<div class="success_story__box1__right on_scroll from_left">
 					<div class="success_story__box1__right__title ssbone">
 						Success Stories
 					</div>
@@ -233,7 +233,7 @@
 				</div>
 			</div>
 			<div class="success_story__box2">
-				<div class="success_story__box2__line ssbtwo">
+				<div class="success_story__box2__line ssbtwo on_scroll from_bottom">
 					<svg class="success_story__box2__line__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M5.25 8.25h15m-16.5 7.5h15m-1.8-13.5-3.9 19.5m-2.1-19.5-3.9 19.5" />
 					</svg>
@@ -241,7 +241,7 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
 					</div>
 				</div>
-				<div class="success_story__box2__line ssbtwo">
+				<div class="success_story__box2__line ssbtwo on_scroll from_bottom">
 					<svg class="success_story__box2__line__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M5.25 8.25h15m-16.5 7.5h15m-1.8-13.5-3.9 19.5m-2.1-19.5-3.9 19.5" />
 					</svg>
@@ -249,7 +249,7 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
 					</div>
 				</div>
-				<div class="success_story__box2__line ssbtwo">
+				<div class="success_story__box2__line ssbtwo on_scroll from_bottom">
 					<svg class="success_story__box2__line__icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M5.25 8.25h15m-16.5 7.5h15m-1.8-13.5-3.9 19.5m-2.1-19.5-3.9 19.5" />
 					</svg>
@@ -267,7 +267,7 @@
 				<p class="faq-box__text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
 				</p>
-				<div class="faq-box__accordion">
+				<div class="faq-box__accordion on_scroll from_left">
 					<div class="faq-box__accordion__minibox">
 						<div class="faq-question">
 							<div class="faq-question__title">
@@ -286,7 +286,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="faq-box__accordion">
+				<div class="faq-box__accordion on_scroll from_left">
 					<div class="faq-box__accordion__minibox">
 						<div class="faq-question">
 							<div class="faq-question__title">
@@ -305,7 +305,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="faq-box__accordion">
+				<div class="faq-box__accordion on_scroll from_left">
 					<div class="faq-box__accordion__minibox">
 						<div class="faq-question">
 							<div class="faq-question__title">
@@ -333,7 +333,7 @@
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
 				</p>
 				<div class="git-box__btn">
-					<button class="blue_btn custom_btn">Contact Us</button>
+					<button class="blue_btn custom_btn on_scroll">Contact Us</button>
 				</div>
 			</div>
 		</section>	
